# cmake_tutorial

./: CMakeLists.txt  Makefile  main.cpp  mysqrt.cpp
MyMath/: CMakeLists.txt  mysqrt.cpp
MyMath/include/: mysqrt.h
